# credkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: cookbook.md
examples/: credit_loss_analysis.py  fifty_year_mortgage.py  mortgage_valuation.py
src/credkit/: __init__.py  _dataframe.py
src/credkit/behavior/: adjustments.py  default.py  loss.py  prepayment.py
src/credkit/cashflow/: discount.py  schedule.py
src/credkit/instruments/: amortization.py  loan.py
src/credkit/io/: __init__.py  _backends.py  _columns.py  _convert.py  loans.py  portfolios.py  replines.py  schedules.py
src/credkit/money/: money.py  rate.py  spread.py
src/credkit/portfolio/: __init__.py  portfolio.py  repline.py
src/credkit/temporal/: calendar.py  daycount.py
tests/: test_behavior.py  test_cashflow.py  test_instruments.py  test_interest_rate.py  test_io.py  test_money.py  test_period.py  test_portfolio.py  test_repline.py
