[project]
name = "credkit"
version = "0.5.1"
description = "An open credit modeling tool kit"
readme = "README.md"
license = { text = "AGPL-3.0-only" }
authors = [
  { name = "jt-hill", email = "13084189+jt-hill@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = ["pyxirr>=0.10"]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
polars = ["polars>=0.20"]
dataframe = ["pandas>=2.0", "polars>=0.20"]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pandas>=2.0",
    "polars>=0.20",
    "ruff>=0.15.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
