[project]
name = "credkit"
version = "0.5.2"
description = "An open credit modeling tool kit"
readme = "README.md"
license = { text = "AGPL-3.0-only" }
authors = [
  { name = "jt-hill", email = "13084189+jt-hill@users.noreply.github.com" },
]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = ["pyxirr>=0.10"]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
polars = ["polars>=0.20"]
dataframe = ["pandas>=2.0", "polars>=0.20"]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "pandas>=2.0",
  "polars>=0.20",
  "ruff>=0.15.0",
  "maturin>=1.12.6",
]

[tool.uv]
workspace = { members = ["vendor/pyxirr"] }

[tool.uv.sources]
pyxirr = { workspace = true }

[tool.pyright]
venvPath = "."
venv = ".venv"
